Fixes to 404 page

--- a/fantasy_data/configs/nginx/errors/404.html
+++ b/fantasy_data/configs/nginx/errors/404.html
@@ -322,7 +322,7 @@
 		</p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="http://wfantasydata.co" target="_blank"><span class="fa fa-home"></span> Home Page</a>
+		<a class="border-button" href="http://www.fantasydata.co" target="_blank"><span class="fa fa-home"></span> Fantasy Data</a>
 		<a class="border-button" href="mailto:fantasydata.co@gmail.com" target="_blank"><span class="fa fa-warning"></span> Report Problem</a>
 	</div>
 </div>
@@ -339,6 +339,6 @@
 
     </script>
 
-    
+
   </body>
 </html>
